# ChangeLog for genkernel
# Copyright 2006-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  26 Jul 2007; Robin H. Johnson <robbat2@gentoo.org> gen_initramfs.sh:
  Clean up a cosmetic error introduced by the symlink patch:  
  ${GK_SHARE}/gen_funcs.sh: line 431: popd:
  /var/tmp/genkernel/3996.6301.23048.13838/initramfs-modules-${KV}-temp: No
  such file or directory

  26 Jul 2007; Robin H. Johnson <robbat2@gentoo.org> generic/initrd.scripts,
  generic/linuxrc:
  The previous patch from bug #174294 still contained some bugs in the linuxrc
  and scripts, that caused a failure during boot. Clean them up with one more
  patch from Nelson Batalha <nelson_batalha@hotmail.com>, again on bug #174294.

  26 Jul 2007; Andrew Gaffney <agaffney@gentoo.org> netboot/linuxrc.x:
  enhanced netboot linuxrc from gustavoz

  26 Jul 2007; Andrew Gaffney <agaffney@gentoo.org> alpha/busy-config,
  gen_compile.sh, gen_determineargs.sh, gen_initramfs.sh, gen_initrd.sh,
  genkernel, genkernel.conf, ia64/busy-config, mips/busy-config,
  parisc/busy-config, parisc64/busy-config, ppc/busy-config,
  ppc64/busy-config, sparc/busy-config, sparc64/busy-config,
  x86/busy-config, x86_64/busy-config, xen0/busy-config, xenU/busy-config:
  enable CONFIG_INSMOD in all arch busy-config files
  disable building of static insmod and remove all code related to it

  26 Jul 2007; Andrew Gaffney <agaffney@gentoo.org> gen_package.sh:
  Patch to compare new config instead of the one left laying around in the
  kerncache dir. Thanks to Pat Double <gentoo@patdouble.com> in bug #179739

  26 Jul 2007; Andrew Gaffney <agaffney@gentoo.org> gen_compile.sh,
  gen_initramfs.sh, gen_initrd.sh, genkernel.conf:
  Patch to actually use busybox bincache. Thanks to Pat Double
  <gentoo@patdouble.com> on bug #180211

  21 Jun 2007; Chris Gianelloni <wolf31o2@gentoo.org> gen_initrd.sh:
  Fixed lvm/evms code for initrd generation. Thanks to Vinny
  <vfuria@gmail.com> on bug #179480 for pointing it out.
