@@ -93,7 +93,7 @@ configuration.
 \fB\-\-\fR[no\-]\fBinstall\fR
 Installs, or does not install the kernel to
 .I /boot
-after building. If MOUNTBOOT is set in
+after building. The default is --install.  If MOUNTBOOT is set in
 .I /etc/genkernel.conf
 then
 .I /boot
