@@ -2,6 +2,11 @@
 # Copyright 2006-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  21 Aug 2007; Chris Gianelloni <wolf31o2@gentoo.org> gen_funcs.sh,
+  genkernel.8:
+  Added another patch from John R. Graham <john_r_graham@mindspring.com> for
+  bug #180161.
+
   26 Jul 2007; Robin H. Johnson <robbat2@gentoo.org> gen_initramfs.sh:
   Clean up a cosmetic error introduced by the symlink patch:  
   ${GK_SHARE}/gen_funcs.sh: line 431: popd:
